k8s/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: patient-portal-demo-pod
  labels:
    app: patient-portal-demo
    type: standalone
spec:
  containers:
    - name: nginx-container
      image: nginx:alpine
      ports:
        - containerPort: 80
      resources:
        requests:
          memory: "64Mi"
          cpu: "50m"
        limits:
          memory: "128Mi"
          cpu: "100m"
