k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: patient-portal-backend
  namespace: default
  labels:
    app: patient-portal-backend
spec:
  type: ClusterIP
  selector:
    app: patient-portal-backend
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: patient-portal-frontend
  namespace: default
  labels:
    app: patient-portal-frontend
spec:
  type: ClusterIP
  selector:
    app: patient-portal-frontend
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
